agregada configuracion para que la aplicacion se pueda descargar como una pwa

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="" href="\src\assets\logoFavicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FlexWork</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik"></script>
